# Detector

./: README.md  settings.gradle
.androidide/editor/: openedFiles.json  openedFiles.json.bak
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  detector.cpp  detector.h
app/src/main/cpp/dev/Qwanwin/implement/: antihook.cpp  antihook.h  antiroot.cpp  antivpn.cpp  antivpn.h
app/src/main/java/com/dev/detector/: MainActivity.java
app/src/main/java/com/dev/detector/Qwanwin/implement/: AntiHook.java  AntiVM.java  Antiemulator.java  DetectorVPN.java  PineDetector.java  RootRobust.java  UtilsEmu.java  UtilsHook.java  UtilsPine.java  UtilsRoot.java  UtilsVM.java  UtilsVPN.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
